--- a/gerenciamento_senai/src/main/resources/templates/interna.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna.html
@@ -10,7 +10,7 @@
     <h1>Login reconhecido!</h1>
     <a href="/buscar_patrimonio">Procurar Ativo Patrimonial</a>
     <a href="/listar_patrimonios">Ver todos os ativos patrimoniais</a>
-    <a href="/buscar_patrimonio"></a>
+    <a href="/listar_salas">Listar todos os ambientes</a>
 </body>
 
 </html>
