--- a/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
@@ -11,21 +11,19 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Nome</th>
-                    <th>Descrição</th>
-                    <th>Data da compra</th>
-                    <th>Sala</th>
+                    <th>Nº</th>
                     <th>Bloco</th>
+                    <th>Responsavel</th>
+                    <th>RE do responsavel</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="patrimonio : ${patrimonios}">
-                    <td th:text="${patrimonio.id_patrimonio}"></td>
-                    <td th:text="${patrimonio.nome_do_ativo}"></td>
-                    <td th:text="${patrimonio.descricao}"></td>
-                    <td th:text="${patrimonio.data_compra}"></td>
-                    <td th:text="${patrimonio.sala.numero}"></td>
-                    <td th:text="${patrimonio.sala.bloco}"></td>
+                <tr th:each="sala : ${salas}">
+                    <td th:text="${sala.id}"></td>
+                    <td th:text="${sala.numero}"></td>
+                    <td th:text="${sala.bloco}"></td>
+                    <td th:text="${sala.funcionario.nome}"></td>
+                    <td th:text="${sala.funcionario.re}"></td>
                 </tr>
             </tbody>
         </table>
