--- a/gerenciamento_senai/src/main/resources/templates/interna.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna.html
@@ -11,6 +11,7 @@
     <a href="/buscar_patrimonio">Procurar Ativo Patrimonial</a>
     <a href="/listar_patrimonios">Ver todos os ativos patrimoniais</a>
     <a href="/listar_salas">Listar todos os ambientes</a>
+    <a href="/logout">Logout</a>
 </body>
 
 </html>
