--- a/gerenciamento_senai/src/main/resources/templates/loginAdm.html
+++ b/gerenciamento_senai/src/main/resources/templates/loginAdm.html
@@ -5,9 +5,11 @@
     <title>Login</title>
 </head>
 <body>
+
+    
     <div>
-        <h2>Login</h2>
-        <form action="#" th:action="@{/login}" method="post">
+        <h2>Login adm</h2>
+        <form action="#" th:action="@{/login-adm}" method="post">
             <div>
                 <label for="username">Email:</label>
                 <input type="email" id="email" name="email" required>
