--- a/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
@@ -30,7 +30,7 @@
                     <td th:text="${patrimonio.id_patrimonio}"></td>
                     <td th:text="${patrimonio.nome_do_ativo}"></td>
                     <td th:text="${patrimonio.descricao}"></td>
-                    <td th:text="${patrimonio.sala.numero}"></td>
+                    <td th:text="${patrimonio.sala.nome}"></td>
                     <td th:text="${patrimonio.sala.bloco}"></td>
                 </tr>
             </tbody>
