--- a/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
@@ -20,7 +20,7 @@
             <tbody>
                 <tr th:each="sala : ${salas}">
                     <td th:text="${sala.id}"></td>
-                    <td th:text="${sala.numero}"></td>
+                    <td th:text="${sala.nome}"></td>
                     <td th:text="${sala.bloco}"></td>
                     <td th:text="${sala.funcionario.nome}"></td>
                     <td th:text="${sala.funcionario.re}"></td>
