--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admPatrimonios.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admPatrimonios.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Buscar Patrimônio</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleRead.css}">
 </head>
 
 <body>
