--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/aprovaMovimentacao.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/aprovaMovimentacao.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="content read">
-        <h2>Histórico de movimentações</h2>
+        <h2>Movimentações solicitadas</h2>
         <div>
             <table>
                 <thead>
@@ -23,6 +23,7 @@
                         <td>Destino</td>
                         <td>Solicitante</td>
                         <td>Data</td>
+                        <td></td>
                     </tr>
                 </thead>
                 <tbody>
@@ -34,18 +35,17 @@
                         <td th:text="${movimentacao.destino.nome}"></td>
                         <td th:text="${movimentacao.solicitante.nome}"></td>
                         <td th:text="${movimentacao.data_movimentacao}"></td>
+                        <td class="actions">
+                            <a th:href="@{/aprovar/{id}(id=${movimentacao.id_mov})}" class="aprovar"><i class="fas fa-check"></i></a>
+                            <a th:href="@{/reprovar/{id}(id=${movimentacao.id_mov})}" class="trash"><i class="fas fa-times"></i></a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <a href="/cadastro-movimentacao" class="link-cadastro">
+        <a href="/adm_mov" class="link-cadastro">
             <div>
-                <h1>Realizar uma nova movimentacao</h1>
-            </div>
-        </a>
-        <a href="/aprovar-movimentacao" class="link-cadastro">
-            <div>
-                <h1>Aprovar movimentacoes</h1>
+                <h1>Voltar</h1>
             </div>
         </a>
     </div>
