--- a/gerenciamento_senai/src/main/resources/templates/interna/interna.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/interna.html
@@ -10,8 +10,9 @@
     <h1>Login reconhecido!</h1>
     <a href="/buscar_patrimonio">Procurar Ativo Patrimonial</a>
     <a href="/listar_patrimonios">Ver todos os ativos patrimoniais</a>
-    <a href="/listar_salas">Listar todos os ambientes</a>
+    <a href="/listar_salas">Ver todos os ambientes</a>
     <a href="/solicitar_movimentacao">Solicitar movimentacao</a>
+    <a href="/listar_armazem">Ver estoque de itens de consumo</a>
     <a href="/logout">Logout</a>
 </body>
 
