--- a/gerenciamento_senai/src/main/resources/templates/interna/listarPatrimonios.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarPatrimonios.html
@@ -26,7 +26,7 @@
                     <td th:text="${patrimonio.nome_do_ativo}"></td>
                     <td th:text="${patrimonio.descricao}"></td>
                     <td th:text="${patrimonio.data_compra}"></td>
-                    <td th:text="${patrimonio.sala.numero}"></td>
+                    <td th:text="${patrimonio.sala.nome}"></td>
                     <td th:text="${patrimonio.sala.bloco}"></td>
                 </tr>
             </tbody>
