--- a/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
@@ -14,7 +14,7 @@
     <!-- Se existirem patrimônios encontrados, exibir na tabela -->
     <div th:if="${patrimoniosEncontrados != null}">
         <h3>Resultados da Busca</h3>
-        <table border="1">
+        <table>
             <thead>
                 <tr>
                     <th>ID</th>
