--- a/gerenciamento_senai/src/main/resources/templates/interna/interna.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/interna.html
@@ -11,7 +11,7 @@
     <a href="/buscar_patrimonio">Procurar Ativo Patrimonial</a>
     <a href="/listar_patrimonios">Ver todos os ativos patrimoniais</a>
     <a href="/listar_salas">Ver todos os ambientes</a>
-    <a href="/solicitar_movimentacao">Solicitar movimentacao</a>
+    <a href="/listar_movimentacoes">Verificar movimentacoes</a>
     <a href="/listar_armazem">Ver estoque de itens de consumo</a>
     <a href="/logout">Logout</a>
 </body>
