--- a/gerenciamento_senai/src/main/resources/templates/interna/listarArmazem.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarArmazem.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Listar Armazem</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleRead.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <h2>Estoque de itens de consumo</h2>
-    <div>
-        <table border="1">
+    <div class="content read">
+        <table>
             <thead>
                 <tr>
                     <th>ID</th>
@@ -35,5 +38,6 @@
             Registrar saída
         </div>
     </a>
+    <a href=""></a>
 </body>
 </html>
