--- a/gerenciamento_senai/src/main/resources/templates/interna/listarMovimentacoes.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarMovimentacoes.html
@@ -38,19 +38,9 @@
                 </tbody>
             </table>
         </div>
-        <a href="/cadastro-movimentacao" class="link-cadastro">
+        <a href="/solicitar_movimentacao" class="link-cadastro">
             <div>
-                <h1>Realizar uma nova movimentacao</h1>
-            </div>
-        </a>
-        <a href="/aprovar-movimentacao" class="link-cadastro">
-            <div>
-                <h1>Aprovar movimentacoes</h1>
-            </div>
-        </a>
-        <a href="/editar-movimentacao" class="link-cadastro">
-            <div>
-                <h1>Editar/Finalizar movimentacoes</h1>
+                <h1>Solicitar uma nova movimentacao</h1>
             </div>
         </a>
     </div>
