--- a/gerenciamento_senai/src/main/resources/templates/interna/cadastrarPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/cadastrarPatrimonio.html
@@ -13,14 +13,14 @@
     <div class="container mt-5">
         <span class="${classe}" th:text="${msg}"></span>
         <h2>Cadastro de Patrimônio</h2>
-        <form action="/cadastro-patrimonio" method="POST">
+        <form action="/cadastrar_patrimonio" method="POST">
             <div class="form-group">
                 <label for="nome_do_ativo">Nome do Ativo:</label>
                 <input type="text" class="form-control" id="nome_do_ativo" name="nome_do_ativo" required>
             </div>
             <div class="form-group">
                 <label for="data_compra">Data de Compra:</label>
-                <input type="date" class="form-control" id="data_compra" name="data_compra" required>
+                <input type="text" class="form-control" id="data_compra" name="data_compra" required>
             </div>
             <div class="form-group">
                 <label for="descricao">Descrição:</label>
