--- a/gerenciamento_senai/src/main/resources/templates/interna/editaPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/editaPatrimonio.html
@@ -13,28 +13,29 @@
     <div class="container mt-5">
         <span class="${classe}" th:text="${msg}"></span>
         <h2>Cadastro de Patrimônio</h2>
-        <form action="/cadastro-patrimonio" method="POST">
+        <form method="POST">
             <div class="form-group">
                 <label for="nome_do_ativo">Nome do Ativo:</label>
-                <input type="text" class="form-control" id="nome_do_ativo" name="nome_do_ativo" required>
+                <input type="text" class="form-control" id="nome_do_ativo" name="nome_do_ativo" required
+                    th:value="${patrimonio.nome_do_ativo}">
             </div>
             <div class="form-group">
                 <label for="data_compra">Data de Compra:</label>
-                <input type="date" class="form-control" id="data_compra" name="data_compra" required>
+                <input type="date" class="form-control" id="data_compra" name="data_compra" required readonly th:value="${patrimonio.data_compra}" th:text="${patrimonio.data_compra}">
             </div>
             <div class="form-group">
                 <label for="descricao">Descrição:</label>
-                <textarea class="form-control" id="descricao" name="descricao" required></textarea>
+                <textarea class="form-control" id="descricao" name="descricao" required
+                    th:text="${patrimonio.descricao}"></textarea>
             </div>
             <div class="form-group">
                 <label for="status">Status:</label>
-                <input type="text" class="form-control" id="status" name="status" required>
+                <input type="text" class="form-control" id="status" name="status" required th:value="${patrimonio.status}">
             </div>
-            <div class="form-group">
+            <div class=" form-group">
                 <label for="sala">Sala:</label>
-                <select class="form-control" id="sala" name="sala" required>
-                    <option th:each="sala : ${salas}" th:value="${sala.id}" th:text="${sala.nome}"></option>
-                </select>
+                <input type="text" class="form-control" id="sala" name="sala" required readonly
+                    th:value="${patrimonio.sala.id}">
             </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
