--- a/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Listar Salas</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleRead.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <h2>Listar Salas</h2>
-    <div>
+    <div class="content read">
         <table border="1">
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Nº</th>
-                    <th>Bloco</th>
-                    <th>Responsavel</th>
-                    <th>RE do responsavel</th>
+                    <td>ID</td>
+                    <td>Nº</td>
+                    <td>Bloco</td>
+                    <td>Responsavel</td>
+                    <td>RE do responsavel</td>
+                    <td>Ver patrimônios</td>
                 </tr>
             </thead>
             <tbody>
@@ -24,6 +28,9 @@
                     <td th:text="${sala.bloco}"></td>
                     <td th:text="${sala.funcionario.nome}"></td>
                     <td th:text="${sala.funcionario.re}"></td>
+                    <td class="actions">
+                        <a th:href="@{/verificarPatrimonios/{id}(id=${sala.id})}" class="edit"><i class="fas fa-list"></i></a>
+                    </td>
                 </tr>
             </tbody>
         </table>
