--- a/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/buscarPatrimonio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Buscar Patrimônio</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 </head>
 <body>
     <h2>Buscar Patrimônio</h2>
