--- a/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarSalas.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Listar Salas</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleRead.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <h2>Listar Salas</h2>
+
     <div class="content read">
-        <table border="1">
+        <div class="title">
+            <h2>Listar Salas</h2>
+        </div>
+        <table>
             <thead>
                 <tr>
                     <td>ID</td>
@@ -29,11 +35,13 @@
                     <td th:text="${sala.funcionario.nome}"></td>
                     <td th:text="${sala.funcionario.re}"></td>
                     <td class="actions">
-                        <a th:href="@{/verificarPatrimonios/{id}(id=${sala.id})}" class="edit"><i class="fas fa-list"></i></a>
+                        <a th:href="@{/verificarPatrimonios/{id}(id=${sala.id})}" class="edit"><i
+                                class="fas fa-list"></i></a>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
 </body>
+
 </html>
