--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admAmbientes.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admAmbientes.html
@@ -9,15 +9,18 @@
 </head>
 
 <body>
-    <h2>Ambientes cadastrados</h2>
-    <div>
-        <table border="1">
+
+    <div class="content read">
+        <div class="title">
+            <h2>Ambientes cadastrados</h2>
+        </div>
+        <table>
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Bloco</th>
-                    <th></th>
+                    <td>Id</td>
+                    <td>Nome</td>
+                    <td>Bloco</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -33,11 +36,14 @@
             </tbody>
         </table>
     </div>
-    <a href="/cadastro-sala">
-        <div class="link-cadastro">
-            <h1>Cadastrar novo Ambiente</h1>
-        </div>
-    </a>
+    <div class="links">
+        <a href="/cadastro-sala">
+            <div class="link">
+                <h1>Cadastrar novo Ambiente</h1>
+            </div>
+        </a>
+    </div>
+
 </body>
 
 </html>
