--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admFuncionarios.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admFuncionarios.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    <h2>Funcionarios</h2>
-    <div>
-        <table border="1">
+
+    <div class="content read">
+        <div class="title">
+            <h2>Funcionarios</h2>
+        </div>
+        <table>
             <thead>
                 <tr>
-                    <th>RE</th>
-                    <th>Nome</th>
-                    <th>E-mail</th>
-                    <th>Setor</th>
-                    <th>Cargo</th>
-                    <th></th>
+                    <td>RE</td>
+                    <td>Nome</td>
+                    <td>E-mail</td>
+                    <td>Setor</td>
+                    <td>Cargo</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -37,11 +40,13 @@
             </tbody>
         </table>
     </div>
-    <a href="/cadastro-funcionario">
-        <div class="link-cadastro">
-            <h1>Cadastrar funcionario</h1>
-        </div>
-    </a>
+    <div class="links">
+        <a href="/cadastro-funcionario">
+            <div class="link">
+                <h1>Cadastrar funcionario</h1>
+            </div>
+        </a>
+    </div>
 </body>
 
 </html>
