--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admPatrimonios.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admPatrimonios.html
@@ -9,19 +9,22 @@
 </head>
 
 <body>
-    <h2>Patrimônios</h2>
-    <div>
-        <table border="1">
+
+    <div class="content read">
+        <div class="title">
+            <h2>Patrimônios</h2>
+        </div>
+        <table>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Descrição</th>
-                    <th>Data da compra</th>
-                    <th>Status</th>
-                    <th>Sala</th>
-                    <th>Bloco</th>
-                    <th></th>
+                    <td>ID</td>
+                    <td>Nome</td>
+                    <td>Descrição</td>
+                    <td>Data da compra</td>
+                    <td>Status</td>
+                    <td>Sala</td>
+                    <td>Bloco</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -41,11 +44,14 @@
             </tbody>
         </table>
     </div>
-    <a href="/cadastro-patrimonio">
-        <div class="link-cadastro">
-            <h1>Cadastrar patrimonio</h1>
-        </div>
-    </a>
+    <div class="links">
+        <a href="/cadastro-patrimonio">
+            <div class="link">
+                <h1>Cadastrar patrimonio</h1>
+            </div>
+        </a>
+    </div>
+    
 </body>
 
 </html>
