--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/editaMovimentacao.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/editaMovimentacao.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="content read">
-        <h2>Histórico de movimentações</h2>
+        <h2>Concluir/Cancelar movimentações</h2>
         <div>
             <table>
                 <thead>
