--- a/gerenciamento_senai/src/main/resources/static/css/styleRead.css
+++ b/gerenciamento_senai/src/main/resources/static/css/styleRead.css
@@ -1,7 +1,15 @@
 .content {
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #f6e6e7;
+    border-radius: 10px;
+    border: 2px solid #daa3a3;
+    padding: 6px 0px;
 }
 
 .content h2 {
@@ -9,80 +17,58 @@
     padding: 25px 0;
     font-size: 22px;
     border-bottom: 1px solid #ebebeb;
-    color: #666666;
+    color: #0f0f0f;
 }
 
-.update form {
-    padding: 15px 0;
+.title{
+    background-color: #f6e6e7;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     display: flex;
-    flex-direction: column;
-}
-
-.update form .form-group{
-    display: flex;
-    flex-direction: row;
-}
-
-.update form label {
-    display: inline-flex;
-    width: 400px;
-    padding: 10px 0;
-    margin: 5px;
-}
-
-.update form input {
-    padding: 10px;
-    width: 400px;
-    border: 1px solid #cccccc;
-    margin: 5px;
-}
-
-.update form select {
-    padding: 10px;
-    width: 400px;
-    border: 1px solid #cccccc;
-    margin: 5px;
-}
-
-.update form input[type="submit"] {
-    display: block;
-    background-color: #324877;
-    border: 0;
-    font-weight: bold;
-    font-size: 14px;
-    color: #FFFFFF;
-    cursor: pointer;
-    width: 200px;
-    margin-top: 15px;
-}
-
-.update form input[type="submit"]:hover {
-    background-color: #243455;
+    margin: 0 auto;
+    border-radius: 8px;
 }
 
 .read table {
+    border-radius: 8px;
     width: 100%;
-    padding-top: 30px;
+    padding-top: 20px;
     border-collapse: collapse;
+    border-radius: 15px;
 }
 .read table thead {
-    background-color: #324877;
-    border-bottom: 1px solid #233150;
+    background-color: #c07f85;
 }
 .read table thead td {
+    text-align: center  ;
     padding: 10px;
     font-weight: bold;
-    color: #ffffff;
+    color: #000000;
     font-size: 14px;
+    font-family: "Bricolage Grotesque", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
 }
 .read table tbody tr {
     border-bottom: 1px solid #d3dae0;
+}
+.read table tbody td {
+    font-family: "Bricolage Grotesque", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
 }
 .read table tbody tr:nth-child(even) {
     background-color: #fbfcfc;
 }
 .read table tbody tr:hover {
-    background-color: #6b96d8;
+    background-color: #b45f5f;
 }
 .read table tbody tr:hover td {
     color: #FFFFFF;
@@ -91,6 +77,7 @@
     color: #FFFFFF;
 }
 .read table tbody tr td {
+    text-align: center;
     padding: 10px;
 }
 .read table tbody tr td:nth-child(1) {
@@ -105,10 +92,11 @@
     text-align: right;
     text-decoration: none;
     color: #FFFFFF;
-    padding: 10px 12px;
+    padding: 0px 14px;
 }
 .read table tbody tr td.actions .trash {
     background-color: #b73737;
+    padding: 5px 10px;
 }
 .read table tbody tr td.actions .trash:hover {
     background-color: #a33131;
@@ -118,7 +106,44 @@
 }
 .read table tbody tr td.actions .aprovar {
     background-color: #0f5214;
+    padding: 5px 10px;
+}
+
+.read table tbody tr td.actions .aprovar:hover{
+    background-color: #225025;
 }
 .read table tbody tr td.actions .edit:hover {
     background-color: #474747;
+}
+
+.links{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 1em;
+}
+
+.links a{
+    text-decoration: none;
+}
+
+.links .link{
+    padding: 1.25em 3em;
+    width: 25em;
+    font-size: 10px;
+    color: white;
+    background-color: rgb(163, 30, 30);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    height: 1.5em;
+    margin: 1em;
+}
+
+.links .link:hover{
+    transition: 0.4s;
+    background-color: rgb(139, 50, 50);
+    transform: scale(1.05);
 }
