--- a/gerenciamento_senai/src/main/resources/templates/interna/cadastrarPatrimonio.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/cadastrarPatrimonio.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Patrimônio</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleCadastro.css}">
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 </head>
 
 <body>
-    <div class="container mt-5">
-        <span class="${classe}" th:text="${msg}"></span>
+    <div class="navbar-titulo">
         <h2>Cadastro de Patrimônio</h2>
+    </div>
+    <div class="content update">
+        <span class="resposta" th:text="${msg}"></span>
         <form action="/cadastrar_patrimonio" method="POST">
             <div class="form-group">
                 <label for="nome_do_ativo">Nome do Ativo:</label>
@@ -20,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label for="data_compra">Data de Compra:</label>
-                <input type="text" class="form-control" id="data_compra" name="data_compra" required>
+                <input type="date" class="form-control" id="data_compra" name="data_compra" required>
             </div>
             <div class="form-group">
                 <label for="descricao">Descrição:</label>
