--- a/gerenciamento_senai/src/main/resources/templates/interna/interna.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/interna.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
 </head>
 
 <body>
