--- a/gerenciamento_senai/src/main/resources/templates/interna/listarArmazem.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarArmazem.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Listar Armazem</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleRead.css}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
-    <h2>Estoque de itens de consumo</h2>
     <div class="content read">
+        <div class="title">
+            <h2>Estoque de itens de consumo</h2>
+        </div>
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>Qntd.</th>
-                    <th>Data de compra</th>
-                    <th>Categoria do produto</th>
-                    <th>Departamento do produto</th>
+                    <td>ID</td>
+                    <td>Nome</td>
+                    <td>Qntd.</td>
+                    <td>Data de compra</td>
+                    <td>Categoria do produto</td>
+                    <td>Departamento do produto</td>
                 </tr>
             </thead>
             <tbody>
@@ -33,11 +38,13 @@
             </tbody>
         </table>
     </div>
-    <a href="/registrar-saida" class="link">
-        <div>
-            Registrar saída
-        </div>
-    </a>
-    <a href=""></a>
+    <div class="links">
+        <a href="/registrar-saida">
+            <div class="link">
+                <h1>Registrar saída</h1>
+            </div>
+        </a>
+    </div>
 </body>
+
 </html>
