--- a/gerenciamento_senai/src/main/resources/templates/interna/listarMovimentacoes.html
+++ b/gerenciamento_senai/src/main/resources/templates/interna/listarMovimentacoes.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Movimentações</title>
+    <link rel="icon" th:href="@{/img/favicon.ico}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/styleRead.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,7 +12,9 @@
 
 <body>
     <div class="content read">
-        <h2>Histórico de movimentações</h2>
+        <div class="title">
+            <h2>Histórico de movimentações</h2>
+        </div>
         <div>
             <table>
                 <thead>
@@ -38,8 +41,10 @@
                 </tbody>
             </table>
         </div>
-        <a href="/solicitar_movimentacao" class="link-cadastro">
-            <div>
+    </div>
+    <div class="links">
+        <a href="/solicitar_movimentacao" >
+            <div class="link" style="width: 35em;">
                 <h1>Solicitar uma nova movimentacao</h1>
             </div>
         </a>
