--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/admConsumo.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-    <h2>Estoque - itens de Consumo</h2>
-    <div>
-        <table border="1">
+    
+    <div class="content read">
+        <div class="title"><h2>Estoque - itens de Consumo</h2></div>
+        <table>
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Qntd estoque</th>
-                    <th>Data da ultima compra</th>
-                    <th>Categoria</th>
-                    <th>Local armazenado</th>
-                    <th></th>
+                    <td>Id</td>
+                    <td>Nome</td>
+                    <td>Qntd estoque</td>
+                    <td>Data da ultima compra</td>
+                    <td>Categoria</td>
+                    <td>Local armazenado</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -39,11 +40,14 @@
             </tbody>
         </table>
     </div>
-    <a href="/cadastro-consumo">
-        <div class="link-cadastro">
-            <h1>Cadastrar item</h1>
-        </div>
-    </a>
+    <div class="links">
+        <a href="/cadastro-consumo">
+            <div class="link">
+                <h1>Cadastrar item</h1>
+            </div>
+        </a>
+    </div>
+    
 </body>
 
 </html>
