--- a/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroFuncionario.html
+++ b/gerenciamento_senai/src/main/resources/templates/internaAdm/cadastroFuncionario.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Funcionários</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/styleCadastro.css}">
 </head>
 
 <body>
-    <div class="container mt-5">
-        <span class="${classe}" th:text="${msg}"></span>
+    <div class="navbar-titulo">
         <h2>Cadastro de Funcionários</h2>
+    </div>
+    <div class="content update">
+        <span class="resposta" th:text="${msg}"></span>
         <form action="/cadastro-funcionario" method="POST">
             <div class="form-group">
                 <label for="nome">RE:</label>
